2002-10-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* win/winmain.h win/winmain.c(kill_pending_Pause_dialog(void)): New
	routine. Kills pending "Pause" dialog box on Windows. Called from
	bail_from_command_line().

	* command.h command.c(call_kill_pending_Pause_dialog(void)): New
	routine. Calls win/winmain.c: kill_pending_Pause_dialog().

	* plot.c(bail_to_command_line): On Windows, call 
	kill_pending_Pause_dialog() when you bail to command line. Needed if
	gnuplot encounters a (re)plotting error when Pause dialog is displayed 
	(e.g. due to very small ranges in mouse zoom or log axis for negative 
	values in data file). Otherwise the Pause dialog stays on the desktop
	until you quit gnuplot.

2002-10-21  Ethan Merritt  <merritt@u.washington.edu>

        * NEWS, docs/gnuplot.doc: Add reference to current `set style fill`
	and `set style line` commands.

2002-09-21  Harald Harders  <h.harders@tu-bs.de>

	* NEWS demo/all.dem demo/arrowstyle.dat demo/arrowstyle.dem
	docs/gnuplot.doc src/axis.c src/axis.h src/gadgets.c src/gadgets.h
	src/graph3d.c src/graphics.c src/graphics.h src/misc.c src/misc.h
	src/plot2d.c src/save.c src/set.c src/setshow.h src/show.c src/tables.c
	src/tables.h src/term.c src/term_api.h src/unset.c term/fig.trm:
	New 'set style arrow' and back angles for arrow head (see Patches:
	[587056] arrow styles via 'set style arrow').

2002-09-21  Harald Harders  <h.harders@tu-bs.de>

	* docs/psdoc/Makefile docs/psdoc/ps_fontfile_doc.tex: This patch
	improves the documentation for ps type1 font embedding. A table
	containing the most important LaTeX text fonts is added. 

2002-10-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/command.c src/command.h src/graph3d.c
	src/graph3d.h src/mouse.c src/plot2d.c src/plot3d.c src/pm3d.c
	src/pm3d.h src/save.c src/set.c src/show.c src/unset.c: New command
	'set view map': forces splot into a layout suitable for 2D maps. 